# notes

./: README.md  随机数.md
Cmake/: CMakeLists.txt  cmake.md
Cmake/ProJect/: CMakeLists.txt
Cmake/ProJect/src/: main.cpp
delaunay 三角剖分/: delaunay 三角剖分.md
octFormer/: octformer.md
